menu generator overlap issue

--- a/plugins/system/assets/css/menu.generator.css
+++ b/plugins/system/assets/css/menu.generator.css
@@ -28,7 +28,7 @@
 	border-radius: 3px;
 	cursor: move;
 	position: relative;
-	z-index: 999;
+	z-index: 99;
 	transition: background-color 400ms;
 	-webkit-transition: background-color 400ms;
 }
@@ -208,5 +208,3 @@
 .background{
   background-color: green;
 }
-
-
